# big-budget-bomb

./: .cursorrules  .gitignore  CHANGES_SUMMARY.md  CLAUDE.md  GPL_License_Research.md  README.md  SESSION_STORAGE_IMPLEMENTATION.md  eslint.config.mjs  package-lock.json  package.json
.github/workflows/: build.yml  python-only.yml  security-and-deps.yml
plans/: graduate-student-loan-caps-calculator.md
python/: .coverage  README.md  activate.sh  pyproject.toml
python/src/: __init__.py
python/src/bigbudgetbomb/: __init__.py  utils.py
python/src/bigbudgetbomb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/src/saltcap_data/: __init__.py  utils.py
python/src/saltcap_data_processing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/tests/: test_basic.py  test_utils.py
src/app/: layout.tsx  page.tsx
src/app/salt/: page.tsx
src/app/snap/: page.tsx
src/app/student-loans/: page.tsx
src/components/: salt-calculator.tsx  snap-map.tsx  student-loan-calculator.tsx
src/util/: loan-calculations.ts  loan-data.ts  tax-calculations.ts  tax-data.ts
