[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saltcap-data-processing"
version = "0.1.0"
description = "Data processing for SNAP benefits and geospatial Tiger data"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Salt Cap Calculator", email = "dev@saltcap.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Core data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    
    # Geospatial data processing
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "fiona>=1.9.0",
    "pyproj>=3.6.0",
    "rasterio>=1.3.0",
    "folium>=0.14.0",
    
    # HTTP requests for data downloading
    "requests>=2.31.0",
    "httpx>=0.25.0",
    
    # File format support
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.1.0",
    
    # Jupyter notebook support
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    
    # Plotting and visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    
    # Progress bars and utilities
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    
    # Data validation
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/saltcap/saltcap-calculator"
Repository = "https://github.com/saltcap/saltcap-calculator"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-ignore = ["E203", "W503"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["saltcap_data"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]